gccida/c0/expand_abs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_abs/src/optabs.c:2810:18: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_abs( machine_mode mode, rtx op0, rtx target, int result_unsignedp, int safe) 
                 ^
                 enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_abs/src/optabs.c:2812:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_abs/src/optabs.c:2844:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_INT || ix86_branch_cost < 2 ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_abs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_abs/src/optabs.c:2872:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_INT || can_compare_p( GE, mode, ccp_jump) ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_abs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_abs/src/obj/optabs.o] Error 1
